--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
 		        	<p class="title"><i>《</i>ABOUT: Chao Lan》</p>
 		        	<p class="username">Lan Chao is a poor man. His body is also sick. But he likes painting so much. His heart is weak. He can not even run fast. He can not speak too loud because that will make him breathless.His ear suffers from continuous ringing. But He desires to be healthy to enjoy the world more.
-The sick man tries hard to live. Sometimes he just wondered why he had to suffer from pain. Maybe that was his destiny. <br>Please help him.</p>
+The sick man tries hard to live. Sometimes he just wondered why he had to suffer from pain. Maybe that was his destiny. <br>Please <a href="https://www.paypal.me/stupidbird/8">HELP</a> him.</p>
 
               <br>
               <div>
